[package]
name = "shamir-tx"
version = "0.1.0"
edition = "2021"
description = "Transactional (MVCC) layer for ShamirDB — TxContext, MvccStore, RepoTxGate. Foundation phase."
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.0"
futures = "0.3"
scc = "2.2"
serde = { version = "1.0.217", features = ["derive"] }
shamir-types = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage", default-features = false }
shamir-wal = { path = "../shamir-wal" }
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["sync"] }

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full", "test-util"] }

[[bench]]
name = "tx_overhead"
harness = false
