[package]
name = "shamir-tx"
version = "0.1.0"
edition = "2021"
description = "Transactional (MVCC) layer for ShamirDB — TxContext, MvccStore, RepoTxGate. Foundation phase."
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
arc-swap = "1.7"
bytes = "1.11.0"
log = "0.4"
rmp-serde = "1.3.0"
futures = "0.3"
scc = "2.2"
serde = { version = "1.0.217", features = ["derive"] }
shamir-collections = { path = "../shamir-collections" }
shamir-tunables = { path = "../shamir-tunables" }
shamir-types = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage", default-features = false }
shamir-wal = { path = "../shamir-wal" }
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt", "sync"] }

[dev-dependencies]
async-trait = "0.1"
bincode = "1.3.3"
bench-scale-tool = { workspace = true, features = ["async"] }
proptest = "1.6"
tokio = { version = "1.49.0", features = ["full", "test-util"] }

[[bench]]
name = "tx_overhead"
harness = false

[[bench]]
name = "overlay_gc_cost_vs_depth"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
