[package]
name = "shamir-types"
version = "0.1.0"
edition = "2021"
description = "Foundation types for ShamirDB — value model, IDs, codecs, interner."
license = "MIT OR Apache-2.0"

[dependencies]
shamir-collections = { path = "../shamir-collections" }

# Core data model
smallvec = "1.11"
serde = { version = "1.0.217", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
rustc-hash = "2.1"
dashmap = "6.1.0"
# Lock-free read snapshots for the interner's reverse map.
# Forward direction uses DashMap (sharded, fine for write+read);
# reverse is a growing Vec read-heavy from many threads, where
# RwLock's atomic-counter bouncing was a real contention point.
arc-swap = "1.7"

# Numeric / temporal value types
rust_decimal = { version = "1.40.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Codecs
rmp = "0.8"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.1", features = ["serde"] }
bincode = "1.3.3"
base-x = "0.2"
bytes = "1.11.0"
rand = "0.9.2"
rand_xoshiro = "0.7"

# Text handling for IDs / interner key validation
unicode-normalization = "0.1.24"

# Errors / logging plumbing used across modules
thiserror = "2.0.18"
log = "0.4"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.3.1"
bench-scale-tool = { workspace = true }

[[bench]]
name = "record_id"
harness = false

[[bench]]
name = "recordview_lens"
harness = false

[[bench]]
name = "codec_msgpack"
harness = false


[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
