[package]
name = "shamir-wal"
version = "0.1.0"
edition = "2021"
description = "Write-Ahead Log for ShamirDB engine"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.0"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
shamir-types = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage", default-features = false }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util"] }
