[package]
name = "shamir-wal"
version = "0.1.0"
edition = "2021"
description = "Write-Ahead Log for ShamirDB engine"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.11.0"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
serde_bytes = "0.11"
crc32fast = "1"
futures = "0.3"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
shamir-types = { path = "../shamir-types" }
shamir-storage = { path = "../shamir-storage", default-features = false }
log = "0.4"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
shamir-bench-utils = { path = "../shamir-bench-utils" }

[[bench]]
name = "wal_append"
harness = false

[lib]
# Doctests are banned project-wide (slow: recompile-per-example). Examples
# live as illustration; behavioural coverage is in unit/integration tests.
doctest = false

[lints]
workspace = true
