[package]
name = "shamir-wasm-host"
version = "0.1.0"
edition = "2021"

[dependencies]
shamir-types = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
shamir-funclib = { path = "../shamir-funclib" }
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
wasmtime = { version = "45", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
    "wat",
    "async",
    "cache",
    "pooling-allocator",
] }
tempfile = "3.10.1"
scc = "2.2"

[dev-dependencies]
argon2 = "0.5"

[lib]
doctest = false

[lints]
workspace = true
