[package]
name = "shamir-wasm-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
shamir-types = { path = "../shamir-types" }
shamir-collections = { path = "../shamir-collections" }
shamir-funclib = { path = "../shamir-funclib" }
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
wasmtime = { version = "45", default-features = false, features = [
    "cranelift",
    "runtime",
    "std",
    "wat",
    "async",
    "cache",
    "pooling-allocator",
] }
tempfile = "3.10.1"
scc = "2.2"
# Used by `compile_rust_source` to enforce a wall-clock timeout on the
# guest `cargo build` (CRIT-6 / audit #440 part A). Already a transitive dep
# in the workspace `Cargo.lock`; pinned here as a direct dependency.
wait-timeout = "0.2.1"
# Structural pre-instantiation sanitizer (task #545). Pinned to the exact
# version wasmtime 45 pulls transitively (see `Cargo.lock`) so no second
# copy enters the dependency graph.
wasmparser = "=0.248.0"
# WAT-text -> binary conversion for `WasmFunction::from_wat`, so the
# sanitizer (which parses raw `.wasm` section bytes) can run on WAT-authored
# test modules the same way it runs on `from_binary`'s compiled artifacts.
# Already a transitive dep of wasmtime's `wat` feature; pinned exactly here.
wat = "=1.251.0"

[dev-dependencies]
argon2 = "0.5"

[lib]
doctest = false

[lints]
workspace = true
