[package]
name = "fn-procedure-builder"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
shamir-sdk = { path = "../../crates/shamir-sdk", features = ["query-builder"] }
# Direct dep required because `q!`/`filter!` proc-macros emit
# `::shamir_query_builder::…` absolute paths.
shamir-query-builder = { path = "../../crates/shamir-query-builder" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
